# spam-classification

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  SIMPLE_DEPLOY.md  STREAMLIT_SHARE_SECRETS.md  pyproject.toml  requirements-full.txt  requirements.txt  setup.py  styles.css  test_examples.txt
data/: evaluation_report.json
models/: lightgbm_model.joblib  logreg_model.joblib  metrics.joblib  tfidf_vectorizer.joblib
src/: agent.py  agent_app.py  components.py  data_processing.py  models.py  streamlit_app.py  train.py
